[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/circle.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/framework/sprite_trail_emitter/SpriteTrailEmitter.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/player/Projectile.gd" type="Script" id=3]
[ext_resource path="res://addons/godot_sfxr/SfxrStreamPlayer.gd" type="Script" id=4]
[ext_resource path="res://assets/resources/materials/gradient_shader.tres" type="Material" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.439655, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="AudioStreamSample" id=3]
data = PoolByteArray( 181, 199, 217, 235, 253, 14, 31, 46, 62, 78, 79, 67, 56, 44, 33, 23, 12, 2, 247, 238, 228, 218, 210, 201, 193, 184, 175, 182, 199, 216, 233, 249, 11, 26, 41, 57, 71, 82, 75, 63, 53, 42, 32, 22, 12, 3, 248, 239, 230, 221, 213, 204, 197, 188, 181, 175, 188, 205, 221, 237, 253, 12, 27, 41, 56, 69, 82, 78, 67, 57, 47, 37, 28, 18, 9, 255, 247, 238, 230, 221, 214, 206, 199, 191, 184, 177, 182, 198, 214, 229, 243, 3, 17, 30, 44, 57, 70, 82, 79, 70, 59, 50, 41, 32, 23, 14, 5, 252, 244, 236, 228, 221, 213, 207, 199, 193, 186, 180, 178, 192, 207, 221, 235, 249, 7, 20, 33, 45, 57, 69, 81, 82, 72, 63, 54, 45, 36, 28, 20, 11, 4, 251, 243, 236, 229, 221, 215, 208, 202, 196, 189, 184, 177, 183, 197, 210, 224, 237, 249, 7, 19, 31, 42, 54, 65, 76, 84, 77, 69, 60, 52, 44, 35, 28, 20, 12, 5, 253, 246, 239, 232, 225, 219, 214, 207, 201, 195, 190, 184, 179, 179, 191, 204, 217, 229, 241, 253, 9, 20, 31, 42, 52, 62, 73, 82, 82, 73, 65, 57, 49, 42, 34, 27, 20, 13, 6, 254, 248, 241, 236, 230, 223, 218, 213, 207, 202, 196, 191, 187, 181, 178, 186, 198, 210, 221, 233, 244, 255, 10, 20, 31, 40, 50, 59, 68, 77, 84, 79, 71, 63, 56, 49, 42, 35, 28, 22, 15, 9, 3, 252, 246, 240, 235, 230, 224, 219, 214, 209, 204, 200, 194, 190, 186, 181, 178, 186, 197, 208, 219, 229, 240, 249, 4, 14, 23, 32, 41, 50, 58, 66, 74, 82, 83, 75, 68, 61, 55, 48, 41, 35, 29, 23, 17, 11, 5, 255, 250, 245, 239, 234, 230, 225, 220, 216, 211, 207, 203, 199, 195, 191, 187, 183, 180, 181, 191, 202, 212, 221, 231, 240, 249, 3, 12, 20, 28, 36, 44, 52, 59, 67, 74, 81, 84, 78, 71, 65, 58, 52, 46, 41, 35, 29, 24, 18, 13, 8, 3, 253, 248, 244, 239, 235, 230, 226, 222, 218, 214, 210, 207, 203, 200, 196, 193, 189, 186, 183, 180, 184, 194, 203, 212, 221, 229, 238, 246, 254, 7, 14, 22, 29, 36, 43, 50, 57, 63, 70, 76, 82, 84, 78, 72, 66, 60, 54, 49, 44, 38, 33, 28, 23, 19, 14, 9, 5, 255, 251, 247, 243, 239, 235, 232, 228, 225, 221, 217, 214, 211, 208, 205, 202, 199, 196, 193, 190, 188, 185, 183, 181, 188, 197, 205, 213, 221, 229, 236, 244, 251, 3, 10, 16, 23, 29, 35, 41, 47, 53, 59, 64, 70, 75, 80, 84, 81, 75, 70, 64, 59, 54, 49, 44, 40, 35, 31, 26, 22, 18, 14, 10, 6, 2, 253, 250, 246, 243, 239, 236, 233, 229, 227, 224, 221, 218, 215, 212, 210, 207, 205, 202, 200, 197, 195, 193, 191, 189, 187, 185, 183, 186, 194, 201, 209, 216, 223, 229, 236, 242, 249, 255, 6, 12, 17, 23, 28, 34, 39, 44, 49, 54, 58, 63, 68, 72, 76, 80, 84, 81, 76, 71, 66, 62, 57, 53, 48, 44, 40, 36, 32, 28, 24, 21, 17, 14, 10, 7, 3, 255, 252, 249, 246, 243, 241, 238, 235, 232, 230, 227, 225, 222, 220, 218, 216, 214, 211, 210, 208, 206, 204, 202, 200, 198, 196, 195, 193, 192, 190, 189, 187, 186, 186, 193, 199, 206, 212, 218, 224, 230, 235, 241, 246, 252, 2, 7, 12, 16, 21, 26, 30, 35, 39, 43, 47, 51, 55, 59, 62, 66, 69, 73, 76, 79, 82, 82, 78, 74, 69, 65, 61, 57, 53, 49, 46, 42, 39, 35, 32, 29, 25, 22, 19, 16, 13, 10, 8, 5, 2, 255, 252, 250, 247, 245, 243, 240, 238, 236, 234, 232, 230, 228, 226, 224, 222, 221, 219, 217, 216, 214, 213, 211, 210, 208, 207, 205, 204, 203, 202, 201, 199, 198, 197, 196, 195, 194, 193, 192, 191, 190, 189, 192, 198, 203, 208, 214, 219, 224, 229, 233, 238, 243, 247, 251, 1, 5, 9, 13, 17, 20, 24, 28, 31, 34, 38, 41, 44, 47, 50, 53, 56, 59, 62, 64, 67, 69, 72, 74, 77, 79, 81, 81, 77, 74, 70, 66, 63, 59, 56, 53, 50, 46, 43, 41, 37, 35, 32, 29, 26, 24, 21, 19, 16, 14, 12, 10, 7, 5, 3, 1, 254, 252, 250, 248, 246, 245, 243, 241, 240, 238, 236, 235, 234, 232, 231, 229, 228, 227, 225, 224, 223, 222, 221, 219, 218, 217, 216, 215, 214, 213, 212, 212, 211, 210, 209, 208, 207, 207, 206, 205, 205, 204, 203, 203, 202, 202, 201, 200, 200, 199, 199, 198, 198, 197, 197, 197, 196, 197, 201, 205, 210, 214, 218, 222, 226, 230, 234, 237, 241, 245, 248, 251, 255, 3, 6, 9, 12, 15, 18, 21, 23, 26, 29, 31, 34, 36, 38, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59, 60, 62, 64, 65, 67, 68, 70, 71, 73, 74, 76, 77, 78, 78, 74, 71, 68, 65, 62, 60, 57, 54, 51, 49, 46, 44, 41, 39, 37, 35, 32, 30, 28, 26, 24, 22, 20, 18, 16, 15, 13, 11, 10, 8, 6, 5, 3, 2, 255, 254, 252, 251, 250, 248, 247, 246, 245, 244, 243, 242, 240, 239, 238, 237, 236, 235, 235, 234, 233, 232, 231, 230, 230, 229, 228, 227, 227, 226, 225, 225, 224, 223, 223, 222, 222, 221, 221, 220, 220, 219, 219, 218, 218, 217, 217, 217, 216, 216, 215, 215, 215, 214, 214, 214, 214, 213, 213, 213, 213, 212, 212, 212, 212, 212, 211, 211, 211, 211, 211, 210, 210, 210, 210, 210, 210, 210, 210, 210, 210, 209, 209, 209, 209, 209, 209, 209, 209, 209, 209, 209, 210, 213, 216, 219, 222, 225, 228, 231, 234, 236, 239, 242, 244, 247, 249, 251, 254, 1, 3, 5, 7, 10, 12, 14, 15, 17, 19, 21, 23, 24, 26, 28, 29, 31, 32, 34, 35, 36, 38, 39, 40, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 57, 58, 59, 60, 60, 61, 62, 62, 63, 63, 64, 65, 65, 66, 66, 67, 67, 68, 68, 69, 69, 69, 68, 65, 63, 61, 59, 57, 54, 52, 50, 48, 46, 45, 43, 41, 39, 37, 36, 34, 32, 31, 29, 28, 26, 25, 24, 22, 21, 19, 18, 17, 16, 15, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 255, 255, 254, 253, 252, 251, 251, 250, 249, 249, 248, 247, 247, 246, 245, 245, 244, 244, 243, 243, 242, 242, 241, 241, 240, 240, 239, 239, 238, 238, 238, 237, 237, 237, 236, 236, 236, 235, 235, 235, 234, 234, 234, 234, 233, 233, 233, 233, 232, 232, 232, 232, 232, 231, 231, 231, 231, 231, 231, 230, 230, 230, 230, 230, 230, 230, 230, 230, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 228, 229, 228, 228, 228, 228, 228, 228, 228, 228, 228, 229, 228, 228, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 229, 230, 230, 230, 230, 230, 230, 230, 230, 230, 230, 230, 230, 230, 230, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 231, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 232, 233, 233, 233, 233, 233, 233, 233, 233, 233, 233, 234, 234, 234, 234, 234, 234, 234, 234, 234, 235, 235, 235, 235, 235, 235, 235, 235, 235, 235, 235, 236, 236, 236, 236, 236, 236, 236, 236, 236, 237, 237, 237, 237, 237, 237, 237, 237, 237, 237, 238, 238, 238, 238, 238, 238, 238, 238, 238, 238, 239, 239, 239, 239, 239, 239, 239, 239, 239, 239, 240, 240, 240, 240, 240, 240, 240, 240, 240, 240, 240, 241, 241, 241, 241, 241, 241, 241, 241, 241, 241, 242, 242, 244, 245, 246, 248, 249, 250, 251, 253, 254, 255, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 11, 12, 13, 14, 15, 15, 16, 17, 17, 18, 19, 19, 20, 21, 21, 22, 22, 23, 23, 24, 24, 25, 25, 26, 26, 27, 27, 27, 28, 28, 29, 29, 29, 30, 30, 30, 31, 31, 31, 32, 32, 32, 32, 33, 33, 33, 33, 33, 34, 34, 34, 34, 34, 35, 35, 35, 35, 35, 35, 35, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 37, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 36, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 35, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 34, 33, 33, 33, 33, 33, 33, 33, 33, 33, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 31, 31, 31, 31, 31, 31, 31, 31, 31, 30, 30, 30, 30, 30, 30, 30, 30, 30, 29, 29, 29, 29, 28, 27, 26, 26, 25, 24, 24, 23, 22, 21, 21, 20, 20, 19, 18, 18, 17, 17, 16, 15, 15, 14, 14, 13, 13, 12, 12, 12, 11, 11, 10, 10, 9, 9, 9, 8, 8, 8, 7, 7, 7, 6, 6, 6, 5, 5, 5, 4, 4, 4, 4, 3, 3, 3, 3, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 255, 255, 255, 255, 255, 254, 254, 254, 254, 254, 254, 254, 254, 253, 253, 253, 253, 253, 253, 253, 253, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3 )

[sub_resource type="AudioStreamSample" id=4]
data = PoolByteArray( 12, 47, 39, 28, 228, 1, 219, 249, 33, 20, 226, 18, 212, 37, 238, 30, 245, 23, 209, 240, 20, 41, 13, 9, 45, 37, 11, 49, 31, 23, 225, 250, 219, 230, 37, 7, 229, 26, 200, 240, 17, 15, 230, 34, 250, 207, 242, 28, 35, 5, 10, 38, 34, 8, 41, 30, 34, 220, 234, 233, 209, 37, 252, 10, 221, 254, 205, 19, 244, 25, 216, 39, 241, 205, 240, 15, 36, 8, 2, 28, 51, 2, 245, 50, 25, 10, 219, 241, 225, 211, 37, 253, 17, 209, 23, 201, 239, 28, 244, 11, 251, 22, 226, 219, 245, 27, 34, 8, 3, 27, 50, 9, 245, 41, 25, 33, 221, 214, 3, 201, 227, 53, 247, 255, 209, 11, 201, 239, 28, 232, 25, 216, 34, 250, 202, 236, 5, 43, 29, 251, 5, 32, 51, 2, 52, 57, 28, 30, 236, 214, 252, 214, 209, 23, 14, 7, 235, 243, 241, 202, 249, 27, 230, 36, 214, 43, 255, 202, 223, 245, 26, 35, 15, 252, 8, 34, 55, 1, 41, 56, 31, 24, 252, 215, 224, 247, 199, 212, 60, 250, 10, 224, 242, 252, 201, 225, 52, 205, 36, 227, 7, 26, 240, 200, 232, 250, 32, 35, 15, 252, 8, 33, 52, 15, 17, 56, 52, 36, 30, 225, 212, 236, 237, 200, 211, 59, 3, 5, 242, 218, 32, 193, 210, 16, 12, 217, 47, 213, 7, 21, 247, 195, 227, 245, 15, 40, 27, 2, 254, 11, 33, 52, 8, 25, 42, 2, 38, 33, 251, 216, 211, 8, 213, 205, 238, 60, 241, 10, 243, 207, 33, 205, 204, 226, 53, 218, 13, 23, 203, 32, 22, 240, 196, 228, 243, 5, 44, 34, 16, 250, 4, 20, 36, 55, 8, 17, 56, 231, 24, 36, 32, 218, 213, 232, 9, 198, 208, 240, 61, 251, 3, 9, 196, 255, 10, 195, 212, 8, 53, 206, 14, 36, 203, 9, 38, 1, 211, 206, 233, 249, 11, 44, 33, 20, 250, 2, 9, 34, 47, 47, 248, 33, 36, 231, 24, 37, 32, 227, 216, 212, 7, 242, 199, 212, 253, 62, 251, 254, 19, 206, 232, 34, 218, 201, 215, 20, 41, 207, 2, 50, 216, 241, 45, 12, 249, 197, 216, 234, 250, 12, 45, 37, 29, 255, 253, 5, 20, 34, 50, 46, 247, 25, 56, 240, 255, 38, 33, 22, 217, 215, 212, 186, 188, 202, 212, 218, 66, 37, 245, 11, 22, 199, 224, 38, 233, 199, 216, 231, 58, 18, 210, 17, 53, 218, 219, 48, 30, 4, 228, 200, 223, 237, 255, 8, 47, 44, 31, 18, 252, 2, 7, 25, 35, 48, 55, 8, 248, 57, 36, 234, 10, 39, 33, 31, 226, 217, 211, 201, 183, 193, 203, 213, 219, 55, 66, 246, 250, 23, 3, 200, 236, 38, 245, 199, 210, 220, 24, 58, 248, 211, 18, 53, 231, 207, 25, 47, 15, 4, 221, 200, 228, 237, 250, 3, 26, 47, 41, 31, 18, 252, 255, 7, 11, 36, 35, 53, 54, 255, 248, 34, 38, 242, 235, 39, 38, 32, 31, 217, 219, 212, 213, 187, 186, 202, 205, 218, 221, 43, 66, 19, 247, 8, 23, 239, 202, 238, 39, 26, 200, 202, 221, 222, 36, 57, 6, 212, 249, 53, 39, 208, 209, 25, 47, 25, 4, 244, 201, 203, 234, 239, 249, 4, 10, 47, 46, 34, 30, 17, 252, 253, 6, 7, 17, 34, 33, 51, 52, 21, 247, 4, 37, 36, 234, 235, 23, 36, 28, 21, 6, 219, 220, 215, 215, 198, 189, 195, 208, 209, 221, 224, 18, 65, 55, 248, 249, 16, 23, 4, 205, 207, 17, 37, 14, 204, 206, 219, 224, 247, 57, 55, 250, 215, 228, 52, 50, 2, 211, 213, 35, 45, 39, 4, 4, 231, 205, 206, 228, 240, 241, 2, 5, 15, 45, 44, 38, 29, 28, 12, 252, 252, 3, 6, 6, 26, 32, 31, 45, 48, 47, 253, 246, 240, 222, 223, 234, 240, 240, 39, 37, 32, 23, 22, 237, 224, 224, 219, 220, 211, 195, 197, 208, 215, 216, 226, 229, 230, 66, 64, 46, 252, 252, 7, 25, 24, 244, 211, 212, 254, 38, 37, 239, 210, 211, 222, 229, 230, 16, 56, 54, 8, 220, 221, 9, 50, 49, 14, 215, 217, 228, 45, 44, 42, 10, 5, 5, 227, 209, 211, 223, 243, 243, 243, 6, 6, 6, 30, 43, 42, 37, 27, 27, 26, 4, 252, 253, 255, 6, 6, 6, 21, 29, 28, 30, 45, 44, 43, 16, 245, 246, 237, 224, 225, 229, 240, 241, 247, 35, 34, 33, 185, 187, 189, 223, 234, 235, 232, 230, 231, 225, 207, 208, 210, 223, 225, 226, 233, 239, 239, 250, 68, 66, 64, 17, 2, 2, 8, 27, 27, 26, 241, 218, 219, 230, 39, 38, 37, 7, 216, 217, 218, 230, 234, 235, 235, 46, 54, 52, 30, 224, 225, 226, 1, 49, 47, 46, 14, 220, 221, 222, 251, 43, 41, 40, 26, 5, 5, 5, 248, 213, 214, 216, 220, 245, 245, 246, 246, 3, 7, 7, 7, 24, 41, 39, 38, 35, 25, 24, 24, 23, 6, 252, 252, 252, 253, 4, 5, 5, 4, 13, 26, 25, 25, 24, 36, 39, 38, 36, 35, 249, 244, 244, 245, 204, 206, 208, 213, 243, 243, 244, 250, 33, 32, 31, 7, 193, 195, 197, 203, 238, 239, 239, 240, 234, 235, 236, 236, 217, 215, 216, 218, 226, 232, 232, 233, 236, 244, 244, 245, 245, 56, 63, 61, 59, 30, 3, 3, 3, 3, 23, 25, 24, 24, 9, 222, 223, 224, 225, 4, 36, 35, 34, 33, 237, 221, 222, 223, 224, 236, 238, 239, 239, 240, 43, 49, 48, 46, 45, 245, 228, 229, 230, 231, 19, 43, 42, 41, 39, 3, 223, 224, 225, 226, 236, 30, 37, 36, 35, 34, 18, 4, 3, 3, 3, 3, 227, 218, 219, 220, 221, 226, 247, 247, 248, 248, 248, 252, 7, 7, 7, 7, 6, 14, 32, 35, 34, 33, 32, 31, 23, 20, 19, 19, 18, 17, 9, 250, 250, 250, 251, 251, 252, 1, 2, 2, 2, 2, 2, 7, 19, 21, 20, 19, 19, 18, 21, 32, 31, 30, 29, 28, 27, 16, 241, 242, 242, 243, 243, 209, 210, 212, 213, 215, 237, 244, 245, 245, 245, 5, 28, 27, 26, 25, 25, 210, 202, 204, 205, 207, 221, 242, 242, 243, 243, 243, 2, 10, 10, 9, 9, 9, 229, 219, 220, 221, 222, 223, 232, 235, 236, 236, 237, 238, 243, 247, 247, 247, 247, 248, 24, 54, 53, 51, 49, 48, 40, 1, 1, 1, 1, 1, 1, 10, 19, 19, 18, 18, 17, 17, 236, 225, 226, 227, 228, 229, 230, 17, 29, 28, 27, 26, 26, 25, 244, 225, 226, 227, 228, 228, 229, 234, 241, 241, 242, 242, 243, 243, 244, 29, 42, 40, 39, 38, 37, 35, 27, 238, 231, 232, 233, 234, 234, 235, 243, 29, 35, 34, 33, 32, 31, 30, 29, 247, 227, 228, 229, 230, 230, 231, 232, 240, 24, 30, 29, 28, 27, 26, 26, 25, 21, 3, 255, 255, 255, 255, 255, 255, 255, 255, 235, 223, 224, 225, 226, 227, 228, 229, 230, 233, 248, 250, 251, 251, 251, 251, 251, 251, 252, 252, 5, 7, 7, 7, 7, 7, 6, 6, 6, 6, 15, 29, 28, 27, 26, 25, 24, 24, 23, 22, 21, 19, 15, 13, 12, 12, 11, 11, 11, 10, 10, 10, 9, 5, 247, 248, 248, 248, 249, 249, 249, 249, 249, 250, 250, 250, 253, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 6, 15, 14, 14, 13, 13, 12, 12, 12, 11, 11, 10, 10, 10, 14, 19, 19, 19, 18, 18, 17, 16, 16, 15, 15, 14, 14, 13, 13, 9, 239, 239, 240, 241, 241, 241, 242, 242, 227, 219, 220, 221, 222, 223, 224, 225, 226, 247, 247, 248, 248, 248, 248, 249, 249, 249, 21, 21, 20, 19, 19, 18, 17, 17, 16, 229, 216, 217, 219, 220, 221, 222, 223, 224, 228, 249, 249, 249, 250, 250, 250, 250, 250, 250, 253, 11, 10, 10, 10, 9, 9, 9, 8, 8, 8, 14, 17, 16, 16, 15, 15, 14, 14, 13, 13, 13, 237, 234, 235, 235, 236, 237, 237, 238, 238, 239, 240, 243, 246, 246, 247, 247, 247, 247, 248, 248, 248, 248, 249, 25, 35, 34, 32, 31, 30, 29, 28, 27, 27, 26, 25, 13, 250, 250, 250, 250, 250, 250, 251, 251, 251, 251, 251, 251, 255, 9, 9, 8, 8, 8, 8, 7, 7, 7, 7, 7, 6, 6, 250, 232, 232, 233, 234, 235, 235, 236, 237, 237, 238, 239, 239, 240, 240, 7, 19, 19, 18, 17, 17, 16, 16, 15, 15, 14, 14, 13, 13, 13, 8, 241, 234, 234, 235, 236, 236, 237, 238, 238, 239, 239, 240, 241, 241, 242, 242, 244, 248, 249, 249, 250, 250, 250, 250, 250, 250, 251, 251, 251, 251, 251, 251, 252, 252, 252, 17, 28, 27, 26, 25, 24, 23, 23, 22, 21, 21, 20, 19, 19, 18, 17, 17, 16, 16, 15, 253, 237, 238, 238, 239, 239, 240, 241, 241, 242, 242, 242, 243, 243, 244, 244, 245, 245, 245, 246, 246, 246, 3, 18, 21, 20, 20, 19, 18, 18, 17, 17, 16, 15, 15, 14, 14, 14, 13, 13, 12, 12, 11, 11, 11, 10, 10, 253, 243, 236, 236, 237, 238, 238, 239, 239, 240, 241, 241, 242, 242, 243, 243, 243, 244, 244, 245, 245, 245, 246, 246, 246, 247, 247, 247, 248, 254, 12, 18, 18, 17, 17, 16, 16, 15, 14, 14, 14, 13, 13, 12, 12, 11, 11, 11, 10, 10, 10, 9, 9, 9, 8, 8, 8, 8, 7, 7, 7, 7, 7, 6, 3, 254, 251, 251, 251, 251, 251, 251, 252, 252, 252, 252, 252, 252, 252, 252, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 249, 245, 242, 242, 243, 243, 244, 244, 244, 245, 245, 246, 246, 246, 247, 247, 247, 247, 248, 248, 248, 249, 249, 249, 249, 249, 250, 250, 250, 250, 250, 251, 251, 251, 251, 251, 251, 252, 252, 252, 252, 252, 252, 252, 252, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 1, 2, 2, 3, 4, 5, 5, 5, 5, 4, 4, 4, 4, 4, 4, 4, 4, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 255, 255, 255, 254, 254, 254, 254, 254, 254, 254, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 1 )

[node name="PlayerProjectile" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
z_index = 4096
z_as_relative = false
collision_layer = 4
collision_mask = 524297
script = ExtResource( 3 )

[node name="SpriteTrailEmitter" parent="." instance=ExtResource( 2 )]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = ExtResource( 5 )
scale = Vector2( 0.25, 0.25 )
emitting = false
amount = 4
lifetime = 0.75
one_shot = true
speed_scale = 2.0
explosiveness = 0.91
texture = ExtResource( 1 )
direction = Vector2( 1, -0.5 )
spread = 23.51
gravity = Vector2( 0, 500 )
initial_velocity = 250.0
initial_velocity_random = 1.0
color_ramp = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FireSound" type="AudioStreamPlayer" parent="."]
stream = SubResource( 3 )
script = ExtResource( 4 )
wave/type = 1
sample_params/sound_vol = 0.25
sample_params/sample_rate = 44100.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.173589
envelope/punch_time = 0.0852411
envelope/decay_time = 0.00854757
frequency/start_frequency = 0.696343
frequency/min_freq_cutoff = 0.084459
frequency/slide = -0.580833
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.233648
duty_cycle/sweep = 0.18131
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.157194
high_pass_filter/cutoff_sweep = 0.0

[node name="WallCollideSound" type="AudioStreamPlayer" parent="."]
stream = SubResource( 4 )
volume_db = -15.0
script = ExtResource( 4 )
wave/type = 3
sample_params/sound_vol = 0.25
sample_params/sample_rate = 44100.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.0713054
envelope/punch_time = 0.0
envelope/decay_time = 0.123129
frequency/start_frequency = 0.712065
frequency/min_freq_cutoff = 0.0
frequency/slide = -0.566762
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.0
duty_cycle/sweep = 0.0
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.202021
high_pass_filter/cutoff_sweep = 0.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 4.17233e-07 )
scale = Vector2( 0.8, 0.8 )
